--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.3",
     "three": "^0.124.0",
     "vue": "^2.6.14",
